<resources>
    <string name="app_name">Challenge Macro Pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_notification">App Notification</string>
    <string name="app_notification_chanel_id">12345</string>

    <string name="title_home">Home</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="popular">Popular</string>
    <string name="votes">%s Votes</string>
    <string name="show_all">Show all</string>
    <string name="discover">Discover</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="in_theaters">In Theaters</string>
    <string name="movie_image">movie image</string>
    <string name="tv_image">tv show image</string>
    <string name="cast_image">cast image</string>
    <string name="video">video</string>
    <string name="videos">VIDEOS</string>
    <string name="cast">CAST</string>
    <string name="person_image">person image</string>
    <string name="biography">BIOGRAPHY</string>
    <string name="photos">PHOTOS</string>
    <string name="known_for">KNOWN FOR</string>
    <string name="highlighted_movie_image">highlighted movie image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_map">Maps</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_upload">Upload</string>
    <string name="title_account">Account</string>
    <string name="title_about_me">About Me</string>
    <string name="text_saved_success">Geolocalización guardada correctamente</string>
    <string name="text_error">Ha ocurrido un Error</string>
    <string name="text_full_name">Nombre Apellido</string>
    <string name="text_create_account">Crear Cuenta</string>
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_btn_login">Iniciar Sesión</string>
    <string name="text_btn_signup">Registrar</string>
    <string name="text_password">Contraseña</string>
    <string name="text_email">Correo Electrónico</string>
    <string name="content_description_login">Login</string>
    <string name="content_description_signup">Sign Up</string>

</resources>